--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,20 +1,39 @@
+<h1>New User</h1>
 
 <%= form_for @user do |f| %>
-  <strong>Name</strong> <%= f.text_field :name %><br>
-  <br>
-  <strong>Password:</strong> <%= f.password_field :password %><br>
-  <br>
-  <strong>Password Confirmation:</strong> <%= f.password_field :password_confirmation %><br>
-  <br>
-  <strong>Height (in inches)<strong> <%= f.text_field :height %><br>
-  <br>
-  <strong>How happy are you? (1-5 scale)</strong> <%= f.text_field :happiness %><br>
-  <br>
-  <strong>How nauseous are you? (1-5 scale)</strong> <%= f.text_field :nausea %><br>
-  <br>
-  <strong>How many tickets do you have?</strong> <%= f.text_field :tickets %><br>
-  <br>
-  <strong>You are Admin?</strong> <%= f.check_box :admin %><br>
-  <br>
-  <%= f.submit "Sign Up" %>
-<% end %>
+    <div class="field">
+        <%= f.label 'user[name]' %> <br>
+        <%= f.text_field :name %>
+    </div>
+    <div class="field">
+        <%= f.label :password %> <br>
+        <%= f.password_field :password %>
+    </div>
+
+    <div class="field">
+        <%= f.label :height, "Height (in inches)" %> <br>
+        <%= f.text_field :height %>
+    </div>
+    <div class="field">
+        <%= f.label :happiness, "How happy are you? (1-5 scale)" %> <br>
+        <%= f.text_field :happiness %>
+    </div>
+
+    <div class="field">
+        <%= f.label :nausea, "How nauseous are you? (1-5 scale)" %> <br>
+        <%= f.text_field :nausea %>
+    </div>
+
+    <div class="field">
+        <%= f.label :tickets, "How many tickets would you like to buy?" %> <br>
+        <%= f.text_field :tickets %> <br>
+    </div>
+    <div class="field">
+        <%= f.label :admin, "Check box for admin" %>
+        <%= f.check_box :admin %>
+    </div>
+
+        <%= f.submit %>
+
+<% end %> <br>
+<%= link_to "Back", root_path %>
