--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,6 @@ ADMIN PAGE
 <strong>Height:</strong> <%= @user.height %><br>
 <strong>Tickets:</strong> <%= @user.tickets %>
 <p>
-<%= link_to "View attractions", attractions_path %><br>
+<%= link_to "See attractions", attractions_path %><br>
 <%= link_to "Log Out", logout_path %>
 </p>
